2008-06-24 Braden McDaniel  <braden@endoframe.com>

	Use native DLL loading facilities on Windows instead of libltdl.

	* src/libopenvrml/openvrml/browser.cpp
	* ide-projects/Windows/VisualC9_0/OpenVRML/javascript/javascript.vcproj
	* ide-projects/Windows/VisualC9_0/OpenVRML/OpenVRML.sln

2008-06-18 Braden McDaniel  <braden@endoframe.com>

	* ide-projects/Windows/VisualC9_0/OpenVRML/openvrml/openvrml.vcproj:
	Updated FreeType dependency to 2.3.6; ignore default library
	"msvcrt" in the Debug configuration.

2008-06-17 Braden McDaniel  <braden@endoframe.com>

	Updates for 0.17.6 release.

	* NEWS
	* README
	* configure.ac
	* doc/Doxyfile
	* ide-projects/Windows/VisualC9_0/OpenVRML/openvrml/openvrml.rc
	* ide-projects/Windows/VisualC9_0/OpenVRML/openvrml/openvrml.vcproj
	* ide-projects/Windows/VisualC9_0/OpenVRML/openvrml-gl/openvrml-gl.rc
	* mozilla-plugin/configure.ac
	* src/Makefile.am: Updated libopenvrml libtool library version to
	8:5:0.

2008-06-16 Braden McDaniel  <braden@endoframe.com>

	If the node hasn't been initialized, we can't use the scene
	pointer.  Modified update_textures functions to return without
	doing anything if the node hasn't yet been initialized.

	* src/node/vrml97/background.cpp
	(openvrml_node_vrml97::background_node::update_textures()): Return
	without doing anything if the node has not been initialized.
	* src/node/vrml97/image_texture.cpp
	(image_texture_node::update_texture()): Return without doing
	anything if the node has not been initialized.

2008-06-16 Braden McDaniel  <braden@endoframe.com>

	Added missing namespace qualification to openvrml::node uses.
	From Steinar Hamre <steinarh@users.sourceforge.net>

	* src/node/vrml97/grouping_node_base.h
	* src/node/vrml97/lod.cpp
	* src/node/vrml97/inline.cpp
	* src/node/vrml97/cad_layer.cpp
	* src/node/vrml97/switch.cpp

2008-06-15 Braden McDaniel  <braden@endoframe.com>

	* models/warbird.wrl: Changed 'vrmlscript' references to
	'javascript'.
